working reward model training using our model and data

--- a/model/modeling_in_trlx/summarize_rlhf/configs/ppo_config_summ_gptj.yml
+++ b/model/modeling_in_trlx/summarize_rlhf/configs/ppo_config_summ_gptj.yml
@@ -11,7 +11,7 @@ train:
   trainer: "AcceleratePPOTrainer"
 
 model:
-  model_path: "CarperAI/openai_summarize_tldr_sft"
+  model_path: "kastan/gptj-sft-rlhf"
   num_layers_unfrozen: 8
 
 tokenizer:
