--- a/model/modeling_in_trlx/summarize_rlhf/configs/default_accelerate_config.yaml
+++ b/model/modeling_in_trlx/summarize_rlhf/configs/default_accelerate_config.yaml
@@ -8,7 +8,7 @@ distributed_type: DEEPSPEED
 downcast_bf16: 'no'
 dynamo_backend: 'NO'
 fsdp_config: {}
-gpu_ids: null
+gpu_ids: 0,1,2
 machine_rank: 0
 main_process_ip: null
 main_process_port: null
