cleanup old json files for scaleai

--- a/model/modeling_in_trlx/summarize_rlhf/reward_model/wandb/run-20230221_125801-3dvnecrj/files/config.yaml
+++ b/model/modeling_in_trlx/summarize_rlhf/reward_model/wandb/run-20230221_125801-3dvnecrj/files/config.yaml
@@ -2,7 +2,7 @@ wandb_version: 1
 
 _name_or_path:
   desc: null
-  value: CarperAI/openai_summarize_tldr_sft
+  value: kastan/gptj-sft-rlhf
 _wandb:
   desc: null
   value:
