FP32 for (1/3) SFT and (2/3) Reward model training, next is PPO

--- a/model/modeling_in_trlx/summarize_rlhf/sft/ds_config_gptj.json
+++ b/model/modeling_in_trlx/summarize_rlhf/sft/ds_config_gptj.json
@@ -1,7 +1,7 @@
 {
-  "train_batch_size": 9,
+  "train_batch_size": "auto",
   "fp16": {
-    "enabled": true,
+    "enabled": false,
     "min_loss_scale": 1,
     "opt_level": "O2"
   },
